# dodoware-pylib

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  unit_tests.py
dodoware/pylib/cmd/: __init__.py  _command.py  _command_interface.py  _command_tool.py  _command_tool_interface.py  _help_command.py  _help_formatter.py
dodoware/pylib/exception/: __init__.py  _exception_info.py  _format_traceback.py  _get_ex_messages.py  _log_ex_messages.py
dodoware/pylib/json/: __init__.py  _to_jobj.py
dodoware/pylib/logging/: _custom_filter.py  _get_logger.py  _init_logger.py
dodoware/pylib/packaging/: __main__.py  _base_command.py  _black_command.py  _build_command.py  _packaging_tool.py  _pylint_command.py  _test_command.py
dodoware/pylib/proc/: __init__.py  _process_runner.py  _process_status.py  _process_thread.py  _stream_handler.py  _stream_settings.py
dodoware/pylib/terraform/: _terraform_component.py  _terraform_counts.py  _terraform_folder.py  _terraform_prereqs.py  _terraform_service.py
dodoware/pylib/unittest/: _get_test_id_list.py  _unit_test_runner.py
dodoware/pylib/util/: __init__.py  _context.py  _get_envar.py  _parse_boolean.py
src/dodoware/pylib/cmd/: __init__.py  _command.py  _command_interface.py  _command_tool.py  _command_tool_interface.py  _dict_action.py  _help_command.py  _help_formatter.py
src/dodoware/pylib/exception/: __init__.py  _exception_info.py  _format_traceback.py  _get_ex_messages.py  _log_ex_messages.py
src/dodoware/pylib/json/: __init__.py  _to_jobj.py
src/dodoware/pylib/logging/: __init__.py  _custom_filter.py  _get_logger.py  _init_logger.py
src/dodoware/pylib/packaging/: __main__.py  _all_command.py  _base_command.py  _black_command.py  _build_command.py  _discover_command.py  _folder_set.py  _packaging_tool.py  _pylint_command.py  _test_command.py
test/: ExceptionTestCase.py  base_test_case.py  cmd_test_case.py  exception_test_case.py  logging_test_case.py  proc_test_case.py  test_tracebacks.yaml  test_tracebacks_indent.yaml  test_tracebacks_reverse.yaml
(+49 files in other folders)
