[build-system]
requires = ["setuptools>=41", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dodoware-pylib"
version = "0.1.0"
description = "DodoWare Python Toolkit"
license = {file = "LICENSE.txt"}
authors = [{name="Dodo Ware", email="dodo@dodoware.com"}]
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "black",
    "build",
    "coverage",
    "jinja2",
    "pydantic",
    "pylint",
    "pyyaml",
    "wheel"
]
