[metadata]
name = dodoware-pylib
version = 0.0.1
description = Dodoware Python Toolkit
author = dodoware.com
author_email = david@dodoware.com
url = https://github.com/dodowaresrc/dodoware-pylib

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
where = src
# = ["test"]

[egg_info]
#egg_base = .build/egg_base
egg_base = .build

[bdist_wheel]
#dist_dir = .build/dist_dir
#bdist_dir = .build/bdist_dir
dist_dir = .build/dist
bdist_dir = .build/bdist
#keep_temp = true

[bdist]
#bdist_base = .build/bdist_base
bdist_base = .build
#bdist_base = .build

[build_py]
#build_lib = .build/build_lib
build_lib = .build

[install]
#install_lib = .build/install_lib
install_lib = .build

[install_lib]
#build_dir = .build/build_dir
#build_dir = .build/build_lib
build_dir = .build
